language/move-lang/tests/move_check/typing/derefrence_reference.exp
error: 

   ┌── tests/move_check/typing/derefrence_reference.move:2:5 ───
   │
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   ·
 5 │     fun t0(r: &R, b: &B) {
   │                - The type: '0x8675309::M::R'
 6 │         R {} = *r;
   │                ^^ Invalid dereference. Can only dereference references to copyable types
   │

error: 

   ┌── tests/move_check/typing/derefrence_reference.move:3:5 ───
   │
 3 │     resource struct B { r: R }
   │     -------- Is found to be a non-copyable type here
 4 │ 
 5 │     fun t0(r: &R, b: &B) {
   │                       - The type: '0x8675309::M::B'
 6 │         R {} = *r;
 7 │         B { r: R{} } = *b;
   │                        ^^ Invalid dereference. Can only dereference references to copyable types
   │

error: 

   ┌── tests/move_check/typing/derefrence_reference.move:2:5 ───
   │
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
 3 │     resource struct B { r: R }
   │                            - The type: '0x8675309::M::R'
   ·
 8 │         R{} = *&b.r;
   │               ^^^^^ Invalid dereference. Can only dereference references to copyable types
   │

error: 

    ┌── tests/move_check/typing/derefrence_reference.move:2:5 ───
    │
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    ·
 11 │     fun t1(r: &mut R, b: &mut B) {
    │                    - The type: '0x8675309::M::R'
 12 │         R {} = *r;
    │                ^^ Invalid dereference. Can only dereference references to copyable types
    │

error: 

    ┌── tests/move_check/typing/derefrence_reference.move:3:5 ───
    │
  3 │     resource struct B { r: R }
    │     -------- Is found to be a non-copyable type here
    ·
 11 │     fun t1(r: &mut R, b: &mut B) {
    │                               - The type: '0x8675309::M::B'
 12 │         R {} = *r;
 13 │         B { r: R{} } = *b;
    │                        ^^ Invalid dereference. Can only dereference references to copyable types
    │

error: 

    ┌── tests/move_check/typing/derefrence_reference.move:2:5 ───
    │
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
  3 │     resource struct B { r: R }
    │                            - The type: '0x8675309::M::R'
    ·
 14 │         R{} = *&b.r;
    │               ^^^^^ Invalid dereference. Can only dereference references to copyable types
    │

error: 

    ┌── tests/move_check/typing/derefrence_reference.move:2:5 ───
    │
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
  3 │     resource struct B { r: R }
    │                            - The type: '0x8675309::M::R'
    ·
 15 │         R{} = *&mut b.r;
    │               ^^^^^^^^^ Invalid dereference. Can only dereference references to copyable types
    │

